feat: add cursor pagination syntax